# AdventOfCode-cpp

./: CMakeLists.txt  README.md  new_day.sh  scratch.cpp  utils.hpp
aoc2022/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp
